--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,13 @@
     }
   ],
   "require": {
-    "php": ">=7.0"
+    "php": ">=7.1",
+    "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "5.2.*"
+    "roave/security-advisories": "dev-master",
+    "phpunit/phpunit": "5.2.*",
+    "matiaspub/bx-api-docs": "^16.5"
   },
   "autoload": {
     "psr-4": {
