--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "require": {
     "php": ">=7.1",
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-dom": "*"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
