--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "php": ">=7.2",
     "ext-json": "*",
-    "ext-dom": "*"
+    "ext-dom": "*",
+    "jeremeamia/superclosure": "^2.0"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
