--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
   "autoload": {
     "psr-4": {
       "spaceonfire\\BitrixTools\\": "src/"
-    }
+    },
+    "files": [
+      "autoload.php"
+    ]
   },
   "bin": [
     "bin/run-in-background.php"
