--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     "php": ">=7.2",
     "ext-json": "*",
     "ext-dom": "*",
-    "jeremeamia/superclosure": "^2.0"
+    "jeremeamia/superclosure": "^2.0",
+    "narrowspark/http-status": "~4.1.0",
+    "spaceonfire/collection": "~1.0.0"
   },
   "require-dev": {
     "roave/security-advisories": "dev-master",
