refactor(mvc): rename classes to be less general
split interfaces for controller and view
split namespaces
added compatibility.php with class aliases to save backwards compatibility

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
       "spaceonfire\\BitrixTools\\": "src/"
     },
     "files": [
-      "autoload.php"
+      "autoload.php",
+      "compatibility.php"
     ]
   },
   "bin": [
