--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,13 @@
   "description": "Utility classes for Bitrix projects",
   "keywords": ["tools", "bitrix"],
   "license": "MIT",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "authors": [
     {
       "name": "Constantine Karnaukhov",
-      "email": "genteelknight@gmail.com"
+      "email": "genteelknight@gmail.com",
+      "role": "Maintainer"
     }
   ],
   "repositories": [
@@ -26,10 +29,7 @@
   "require-dev": {
     "roave/security-advisories": "dev-master",
     "phpunit/phpunit": "^8.1.5",
-    "phpdocumentor/phpdocumentor": "^2.9.0",
-    "jms/serializer": "^1.13",
-    "phpdocumentor/reflection-docblock": "^2.0.5",
-    "spaceonfire/phpdoc-markdown-public": "dev-master",
+    "spaceonfire/simple-php-apidoc": "~1.0.1",
     "matiaspub/bx-api-docs": "dev-master"
   },
   "autoload": {
@@ -50,8 +50,8 @@
   },
   "scripts": {
     "doc": [
-      "phpdoc",
-      "npx prettier --write docs/**"
+      "apidoc",
+      "npx prettier --write docs/**/*.md"
     ]
   }
 }
