--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,5 @@
-# editorconfig.org
+; This file is for unifying the coding style for different editors and IDEs.
+; More information at http://editorconfig.org
 
 root = true
 
@@ -10,6 +11,9 @@ indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[**.{js,ts,jsx,tsx,less,css,sass,scss,json,yml}]
+[**.{js, ts, jsx, tsx, less, css, sass, scss, json, yml}]
 indent_size = 2
+indent_style = space
+
+[**.{md, php}]
 indent_style = space
