--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "php": "^7.2",
     "ext-json": "*",
     "ext-dom": "*",
-    "jeremeamia/superclosure": "^2.0",
     "narrowspark/http-status": "^4.1",
+    "opis/closure": "^3.5",
     "spaceonfire/collection": "^1.3"
   },
   "require-dev": {
