--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "ext-dom": "*",
     "narrowspark/http-status": "^4.1",
     "opis/closure": "^3.5",
-    "spaceonfire/collection": "^1.3"
+    "spaceonfire/collection": "^1.3",
+    "webmozart/assert": "^1.0"
   },
   "require-dev": {
     "phpstan/phpstan": "^0.12",
