--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     "ext-dom": "*",
     "narrowspark/http-status": "^4.1",
     "opis/closure": "^3.5",
+    "phpdocumentor/reflection-docblock": "^5.1",
     "spaceonfire/collection": "^1.3",
+    "symfony/property-info": "^5.0",
     "webmozart/assert": "^1.0"
   },
   "require-dev": {
