--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,18 @@
     "opis/closure": "^3.5",
     "phpdocumentor/reflection-docblock": "^5.1",
     "spaceonfire/collection": "^1.3",
-    "symfony/property-info": "^5.0",
+    "spaceonfire/type": "^1.0",
     "webmozart/assert": "^1.0"
   },
   "require-dev": {
     "phpstan/phpstan": "^0.12",
     "roave/security-advisories": "dev-master",
     "spaceonfire/simple-php-apidoc": "^1.1",
+    "symfony/property-info": "^5.0",
     "symplify/easy-coding-standard-prefixed": "7.3.17"
+  },
+  "suggest": {
+    "symfony/property-info": "Required if you want to use for ComponentPropertiesTrait"
   },
   "autoload": {
     "psr-4": {
