--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "narrowspark/http-status": "^4.1",
     "opis/closure": "^3.5",
     "phpdocumentor/reflection-docblock": "^5.1",
-    "spaceonfire/collection": "^1.3",
+    "spaceonfire/collection": "^1.3|^2.0",
     "spaceonfire/type": "^1.0",
     "webmozart/assert": "^1.0"
   },
