--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,6 @@
     "ext-json": "*",
     "ext-dom": "*",
     "narrowspark/http-status": "^4.1",
-    "opis/closure": "^3.5",
-    "phpdocumentor/reflection-docblock": "^5.1",
     "spaceonfire/collection": "^1.3|^2.0",
     "spaceonfire/type": "^1.0",
     "webmozart/assert": "^1.0"
@@ -26,10 +24,12 @@
     "roave/security-advisories": "dev-master",
     "spaceonfire/simple-php-apidoc": "^1.1",
     "symfony/property-info": "^5.0",
+    "phpdocumentor/reflection-docblock": "^5.1",
     "symplify/easy-coding-standard-prefixed": "7.3.17"
   },
   "suggest": {
-    "symfony/property-info": "Required if you want to use for ComponentPropertiesTrait"
+    "symfony/property-info": "Required if you want to use for ComponentPropertiesTrait",
+    "phpdocumentor/reflection-docblock": "Required if you want to use for ComponentPropertiesTrait"
   },
   "autoload": {
     "psr-4": {
