--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "spaceonfire/simple-php-apidoc": "^1.1",
     "symfony/property-info": "^5.0",
     "phpdocumentor/reflection-docblock": "^5.1",
-    "symplify/easy-coding-standard-prefixed": "7.3.17"
+    "symplify/easy-coding-standard-prefixed": "^8.0"
   },
   "suggest": {
     "symfony/property-info": "Required if you want to use for ComponentPropertiesTrait",
