--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
     "ext-json": "*",
     "ext-dom": "*",
     "narrowspark/http-status": "^4.1",
-    "spaceonfire/collection": "^1.3|^2.0",
-    "spaceonfire/type": "^1.0",
+    "spaceonfire/collection": "^1.3|^2.5",
+    "spaceonfire/type": "^1.0|^2.5",
     "webmozart/assert": "^1.0"
   },
   "require-dev": {
     "phpstan/phpstan": "^0.12",
-    "roave/security-advisories": "dev-master",
+    "roave/security-advisories": "dev-latest",
     "spaceonfire/simple-php-apidoc": "^1.1",
     "symfony/property-info": "^5.0",
     "phpdocumentor/reflection-docblock": "^5.1",
